--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Example project with ts and express",
   "main": "index.js",
   "scripts": {
+    "dev": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/grunitech/nodejs-ts-express-lecture/issues"
   },
-  "homepage": "https://github.com/grunitech/nodejs-ts-express-lecture#readme"
+  "homepage": "https://github.com/grunitech/nodejs-ts-express-lecture#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
