--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Example project with ts and express",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "tsnd --respawn src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
