--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsnd --respawn src/index.ts",
     "build": "tsc",
     "start": "echo 'KLUM'",
-    "test": "mocha -r ts-node/register src/*.test.ts"
+    "test": "mocha -r ts-node/register src/*.test.ts",
+    "test:jest": "jest src/foo.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,13 @@
     "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
     "chai": "^4.3.7",
+    "jest": "^29.3.1",
     "mocha": "^10.2.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
