--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsnd --respawn src/index.ts",
     "build": "tsc",
     "start": "echo 'KLUM'",
-    "test": "mocha -r ts-node/register src/*.test.ts",
+    "test": "mocha -r ts-node/register src/**/*.test.ts",
     "test:jest": "jest src/foo.spec.ts"
   },
   "repository": {
@@ -28,9 +28,10 @@
     "@types/jest": "^29.2.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
+    "@types/supertest": "^2.0.12",
     "chai": "^4.3.7",
-    "jest": "^29.3.1",
     "mocha": "^10.2.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -40,5 +41,6 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2"
+
   }
 }
