--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.15",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
+    "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
@@ -39,6 +40,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
   }
 }
