--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.11.17",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.10",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3",
@@ -43,6 +44,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "validator": "^13.7.0"
   }
 }
