--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
     "@types/pg": "^8.6.6",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^15.0.1",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
