--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "proxyquire": "^2.1.3",
     "sinon": "^15.0.1",
     "supertest": "^6.3.3",
+    "ts-mock-imports": "^1.3.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
