--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
     "@types/pg": "^8.6.6",
@@ -50,6 +51,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "validator": "^13.7.0"
   }
