--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "validator": "^13.7.0"
