--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Example project with ts and express",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write src",
+    "lint": "eslint src/**/*.ts",
     "test": "mocha -r ts-node/register src/**/*.test.ts",
     "dev": "tsnd --respawn src/index.ts",
     "build": "tsc",
@@ -36,7 +38,10 @@
     "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "chai": "^4.3.7",
+    "eslint": "^8.32.0",
     "mocha": "^10.2.0",
     "proxyquire": "^2.1.3",
     "sinon": "^15.0.1",
@@ -54,6 +59,7 @@
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
+    "prettier": "^2.8.3",
     "validator": "^13.7.0"
   }
 }
